# shorturl

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
app/: analytics.py  auth.py  config.py  db.py  geo.py  main.py  qr.py  slug.py
app/static/: style.css
app/templates/: analytics.html  base.html  dashboard.html  link_form.html  links.html  login.html  overview.html  qr_gallery.html  stats.html
deploy/: shorturl-api.service  shorturl.nginx.conf
scripts/: 002_analytics.sql  hash_password.py  init_db.sql  update_geoip.sh
