[project]
name = "shorturl"
version = "0.1.0"
description = "URL shortener for shorturl.janapriyahomes.com"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "psycopg[binary,pool]>=3.2",
  "jinja2>=3.1",
  "python-multipart>=0.0.9",
  "itsdangerous>=2.2",
  "bcrypt>=4.1",
  "qrcode[pil]>=7.4",
  "pydantic-settings>=2.4",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
